traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:14: error: not found: value i
      setPos(i,j)
             ^TraversalByColumn:20: error: not found: value i
    i=i+1
    ^